text change to make sure changes get propped

--- a/templates/form.html
+++ b/templates/form.html
@@ -7,7 +7,7 @@
                   'styles/style.css')}}">
   </head>
   <body>
-    <h1>Euro to USD</h1>
+    <h1>Euro to USD version II</h1>
     <div id="output">
       <form method="POST">
         € <input type="number"
