--- a/templates/form.html
+++ b/templates/form.html
@@ -7,7 +7,8 @@
                   'styles/style.css')}}">
   </head>
   <body>
-    <h1>Euro to USD version IV</h1>
+    <h1>Euro to USD version VII</h1>
+
     <div id="output">
       <form method="POST">
         € <input type="number"
